src/snapshots/lipe_find_parser__find_compilation__compile_permission_check_symbolic_equal_user_group_minus.snap
---
source: src/lib.rs
assertion_line: 225
expression: "parse_and_compile(\"-perm ug-rw\").unwrap()"
---
(use-modules (lipe) (lipe find))

(let* ()
  (dynamic-wind
    (lambda () #t)
    (lambda () (lipe-scan
        "/"
        (lipe-getopt-client-mount-path)
        (lambda () (and (= (logand (mode) 4095) 0) (print-relative-path)))
        (lipe-getopt-required-attrs)
        (lipe-getopt-thread-count)))
    (lambda () #t)))
