src/snapshots/lipe_find_parser__find_compilation__compile_permission_check_symbolic_equal_user_plus.snap
---
source: src/lib.rs
assertion_line: 230
expression: "parse_and_compile(\"-perm u+w\").unwrap()"
---
(use-modules (lipe) (lipe find))

(let* ()
  (dynamic-wind
    (lambda () #t)
    (lambda () (lipe-scan
        "/"
        (lipe-getopt-client-mount-path)
        (lambda () (and (= (logand (mode) 4095) 128) (print-relative-path)))
        (lipe-getopt-required-attrs)
        (lipe-getopt-thread-count)))
    (lambda () #t)))
